calc-sintaxis.output
Terminals unused in grammar

    TDECL
    TMAIN


Grammar

    0 $accept: program $end

    1 program: program '{' vars methods '}'
    2        | program '{' methods '}'
    3        | program '{' vars '}'
    4        | '{' '}'

    5 vars: vars var_decl
    6     | var_decl

    7 var_decl: type id '=' expr ';'

    8 methods: methods method_decl
    9        | method_decl

   10 method_decl: type id '(' params ')' block
   11            | type id '(' params ')' EXTERN ';'

   12 params: params ',' param
   13       | param

   14 param: type id

   15 block: '{' vars statements '}'
   16      | '{' vars '}'
   17      | '{' statements '}'
   18      | '{' '}'

   19 statements: statements single_statement
   20           | single_statement

   21 single_statement: id '=' expr ';'
   22                 | method_call ';'
   23                 | TIF '(' expr ')' THEN block
   24                 | TIF '(' expr ')' THEN block TELSE block
   25                 | TWHILE '(' expr ')' block
   26                 | TRET ';'
   27                 | TRET expr ';'
   28                 | ';'
   29                 | block

   30 method_call: id '(' exprs ')'

   31 exprs: exprs ',' expr
   32      | expr

   33 expr: id
   34     | method_call
   35     | literal
   36     | expr TMAS expr
   37     | expr TMENOS expr
   38     | expr TDIV expr
   39     | expr TMULT expr
   40     | expr TAND expr
   41     | expr TOR expr
   42     | expr TMENOR expr
   43     | expr TMOD expr
   44     | expr TMAYOR expr
   45     | expr TIGUAL expr
   46     | TMENOS expr
   47     | TNEG expr
   48     | '(' expr ')'

   49 literal: BOOLV
   50        | INTV

   51 id: TID

   52 type: TTYPE
   53     | TVOID


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 10 11 23 24 25 30 48
    ')' (41) 10 11 23 24 25 30 48
    ',' (44) 12 31
    ';' (59) 7 11 21 22 26 27 28
    '=' (61) 7 21
    '{' (123) 1 2 3 4 15 16 17 18
    '}' (125) 1 2 3 4 15 16 17 18
    error (256)
    INTV (258) 50
    TRET (259) 26 27
    TDECL (260)
    TVOID (261) 53
    TMAIN (262)
    BOOLV (263) 49
    TID (264) 51
    TMENOR (265) 42
    TMAYOR (266) 44
    TIGUAL (267) 45
    TMENOS (268) 37 46
    TMAS (269) 36
    TMULT (270) 39
    TDIV (271) 38
    TMOD (272) 43
    TOR (273) 41
    TNEG (274) 47
    TAND (275) 40
    EXTERN (276) 11
    TWHILE (277) 25
    TIF (278) 23 24
    THEN (279) 23 24
    TELSE (280) 24
    TTYPE (281) 52
    UMINUS (282)


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    program (36)
        on left: 1 2 3 4
        on right: 0 1 2 3
    vars (37)
        on left: 5 6
        on right: 1 3 5 15 16
    var_decl (38)
        on left: 7
        on right: 5 6
    methods (39)
        on left: 8 9
        on right: 1 2 8
    method_decl (40)
        on left: 10 11
        on right: 8 9
    params (41)
        on left: 12 13
        on right: 10 11 12
    param (42)
        on left: 14
        on right: 12 13
    block (43)
        on left: 15 16 17 18
        on right: 10 23 24 25 29
    statements (44)
        on left: 19 20
        on right: 15 17 19
    single_statement (45)
        on left: 21 22 23 24 25 26 27 28 29
        on right: 19 20
    method_call (46)
        on left: 30
        on right: 22 34
    exprs (47)
        on left: 31 32
        on right: 30 31
    expr (48)
        on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
        on right: 7 21 23 24 25 27 31 32 36 37 38 39 40 41 42 43 44 45 46 47 48
    literal (49)
        on left: 49 50
        on right: 35
    id (50)
        on left: 51
        on right: 7 10 11 14 21 30 33
    type (51)
        on left: 52 53
        on right: 7 10 11 14


State 0

    0 $accept: • program $end

    '{'  shift, and go to state 1

    program  go to state 2


State 1

    4 program: '{' • '}'

    '}'  shift, and go to state 3


State 2

    0 $accept: program • $end
    1 program: program • '{' vars methods '}'
    2        | program • '{' methods '}'
    3        | program • '{' vars '}'

    $end  shift, and go to state 4
    '{'   shift, and go to state 5


State 3

    4 program: '{' '}' •

    $default  reduce using rule 4 (program)


State 4

    0 $accept: program $end •

    $default  accept


State 5

    1 program: program '{' • vars methods '}'
    2        | program '{' • methods '}'
    3        | program '{' • vars '}'

    TVOID  shift, and go to state 6
    TTYPE  shift, and go to state 7

    vars         go to state 8
    var_decl     go to state 9
    methods      go to state 10
    method_decl  go to state 11
    type         go to state 12


State 6

   53 type: TVOID •

    $default  reduce using rule 53 (type)


State 7

   52 type: TTYPE •

    $default  reduce using rule 52 (type)


State 8

    1 program: program '{' vars • methods '}'
    3        | program '{' vars • '}'
    5 vars: vars • var_decl

    TVOID  shift, and go to state 6
    TTYPE  shift, and go to state 7
    '}'    shift, and go to state 13

    var_decl     go to state 14
    methods      go to state 15
    method_decl  go to state 11
    type         go to state 12


State 9

    6 vars: var_decl •

    $default  reduce using rule 6 (vars)


State 10

    2 program: program '{' methods • '}'
    8 methods: methods • method_decl

    TVOID  shift, and go to state 6
    TTYPE  shift, and go to state 7
    '}'    shift, and go to state 16

    method_decl  go to state 17
    type         go to state 18


State 11

    9 methods: method_decl •

    $default  reduce using rule 9 (methods)


State 12

    7 var_decl: type • id '=' expr ';'
   10 method_decl: type • id '(' params ')' block
   11            | type • id '(' params ')' EXTERN ';'

    TID  shift, and go to state 19

    id  go to state 20


State 13

    3 program: program '{' vars '}' •

    $default  reduce using rule 3 (program)


State 14

    5 vars: vars var_decl •

    $default  reduce using rule 5 (vars)


State 15

    1 program: program '{' vars methods • '}'
    8 methods: methods • method_decl

    TVOID  shift, and go to state 6
    TTYPE  shift, and go to state 7
    '}'    shift, and go to state 21

    method_decl  go to state 17
    type         go to state 18


State 16

    2 program: program '{' methods '}' •

    $default  reduce using rule 2 (program)


State 17

    8 methods: methods method_decl •

    $default  reduce using rule 8 (methods)


State 18

   10 method_decl: type • id '(' params ')' block
   11            | type • id '(' params ')' EXTERN ';'

    TID  shift, and go to state 19

    id  go to state 22


State 19

   51 id: TID •

    $default  reduce using rule 51 (id)


State 20

    7 var_decl: type id • '=' expr ';'
   10 method_decl: type id • '(' params ')' block
   11            | type id • '(' params ')' EXTERN ';'

    '='  shift, and go to state 23
    '('  shift, and go to state 24


State 21

    1 program: program '{' vars methods '}' •

    $default  reduce using rule 1 (program)


State 22

   10 method_decl: type id • '(' params ')' block
   11            | type id • '(' params ')' EXTERN ';'

    '('  shift, and go to state 24


State 23

    7 var_decl: type id '=' • expr ';'

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    '('     shift, and go to state 29

    method_call  go to state 30
    expr         go to state 31
    literal      go to state 32
    id           go to state 33


State 24

   10 method_decl: type id '(' • params ')' block
   11            | type id '(' • params ')' EXTERN ';'

    TVOID  shift, and go to state 6
    TTYPE  shift, and go to state 7

    params  go to state 34
    param   go to state 35
    type    go to state 36


State 25

   50 literal: INTV •

    $default  reduce using rule 50 (literal)


State 26

   49 literal: BOOLV •

    $default  reduce using rule 49 (literal)


State 27

   46 expr: TMENOS • expr

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    '('     shift, and go to state 29

    method_call  go to state 30
    expr         go to state 37
    literal      go to state 32
    id           go to state 33


State 28

   47 expr: TNEG • expr

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    '('     shift, and go to state 29

    method_call  go to state 30
    expr         go to state 38
    literal      go to state 32
    id           go to state 33


State 29

   48 expr: '(' • expr ')'

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    '('     shift, and go to state 29

    method_call  go to state 30
    expr         go to state 39
    literal      go to state 32
    id           go to state 33


State 30

   34 expr: method_call •

    $default  reduce using rule 34 (expr)


State 31

    7 var_decl: type id '=' expr • ';'
   36 expr: expr • TMAS expr
   37     | expr • TMENOS expr
   38     | expr • TDIV expr
   39     | expr • TMULT expr
   40     | expr • TAND expr
   41     | expr • TOR expr
   42     | expr • TMENOR expr
   43     | expr • TMOD expr
   44     | expr • TMAYOR expr
   45     | expr • TIGUAL expr

    TMENOR  shift, and go to state 40
    TMAYOR  shift, and go to state 41
    TIGUAL  shift, and go to state 42
    TMENOS  shift, and go to state 43
    TMAS    shift, and go to state 44
    TMULT   shift, and go to state 45
    TDIV    shift, and go to state 46
    TMOD    shift, and go to state 47
    TOR     shift, and go to state 48
    TAND    shift, and go to state 49
    ';'     shift, and go to state 50


State 32

   35 expr: literal •

    $default  reduce using rule 35 (expr)


State 33

   30 method_call: id • '(' exprs ')'
   33 expr: id •

    '('  shift, and go to state 51

    $default  reduce using rule 33 (expr)


State 34

   10 method_decl: type id '(' params • ')' block
   11            | type id '(' params • ')' EXTERN ';'
   12 params: params • ',' param

    ')'  shift, and go to state 52
    ','  shift, and go to state 53


State 35

   13 params: param •

    $default  reduce using rule 13 (params)


State 36

   14 param: type • id

    TID  shift, and go to state 19

    id  go to state 54


State 37

   36 expr: expr • TMAS expr
   37     | expr • TMENOS expr
   38     | expr • TDIV expr
   39     | expr • TMULT expr
   40     | expr • TAND expr
   41     | expr • TOR expr
   42     | expr • TMENOR expr
   43     | expr • TMOD expr
   44     | expr • TMAYOR expr
   45     | expr • TIGUAL expr
   46     | TMENOS expr •

    $default  reduce using rule 46 (expr)


State 38

   36 expr: expr • TMAS expr
   37     | expr • TMENOS expr
   38     | expr • TDIV expr
   39     | expr • TMULT expr
   40     | expr • TAND expr
   41     | expr • TOR expr
   42     | expr • TMENOR expr
   43     | expr • TMOD expr
   44     | expr • TMAYOR expr
   45     | expr • TIGUAL expr
   47     | TNEG expr •

    $default  reduce using rule 47 (expr)


State 39

   36 expr: expr • TMAS expr
   37     | expr • TMENOS expr
   38     | expr • TDIV expr
   39     | expr • TMULT expr
   40     | expr • TAND expr
   41     | expr • TOR expr
   42     | expr • TMENOR expr
   43     | expr • TMOD expr
   44     | expr • TMAYOR expr
   45     | expr • TIGUAL expr
   48     | '(' expr • ')'

    TMENOR  shift, and go to state 40
    TMAYOR  shift, and go to state 41
    TIGUAL  shift, and go to state 42
    TMENOS  shift, and go to state 43
    TMAS    shift, and go to state 44
    TMULT   shift, and go to state 45
    TDIV    shift, and go to state 46
    TMOD    shift, and go to state 47
    TOR     shift, and go to state 48
    TAND    shift, and go to state 49
    ')'     shift, and go to state 55


State 40

   42 expr: expr TMENOR • expr

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    '('     shift, and go to state 29

    method_call  go to state 30
    expr         go to state 56
    literal      go to state 32
    id           go to state 33


State 41

   44 expr: expr TMAYOR • expr

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    '('     shift, and go to state 29

    method_call  go to state 30
    expr         go to state 57
    literal      go to state 32
    id           go to state 33


State 42

   45 expr: expr TIGUAL • expr

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    '('     shift, and go to state 29

    method_call  go to state 30
    expr         go to state 58
    literal      go to state 32
    id           go to state 33


State 43

   37 expr: expr TMENOS • expr

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    '('     shift, and go to state 29

    method_call  go to state 30
    expr         go to state 59
    literal      go to state 32
    id           go to state 33


State 44

   36 expr: expr TMAS • expr

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    '('     shift, and go to state 29

    method_call  go to state 30
    expr         go to state 60
    literal      go to state 32
    id           go to state 33


State 45

   39 expr: expr TMULT • expr

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    '('     shift, and go to state 29

    method_call  go to state 30
    expr         go to state 61
    literal      go to state 32
    id           go to state 33


State 46

   38 expr: expr TDIV • expr

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    '('     shift, and go to state 29

    method_call  go to state 30
    expr         go to state 62
    literal      go to state 32
    id           go to state 33


State 47

   43 expr: expr TMOD • expr

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    '('     shift, and go to state 29

    method_call  go to state 30
    expr         go to state 63
    literal      go to state 32
    id           go to state 33


State 48

   41 expr: expr TOR • expr

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    '('     shift, and go to state 29

    method_call  go to state 30
    expr         go to state 64
    literal      go to state 32
    id           go to state 33


State 49

   40 expr: expr TAND • expr

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    '('     shift, and go to state 29

    method_call  go to state 30
    expr         go to state 65
    literal      go to state 32
    id           go to state 33


State 50

    7 var_decl: type id '=' expr ';' •

    $default  reduce using rule 7 (var_decl)


State 51

   30 method_call: id '(' • exprs ')'

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    '('     shift, and go to state 29

    method_call  go to state 30
    exprs        go to state 66
    expr         go to state 67
    literal      go to state 32
    id           go to state 33


State 52

   10 method_decl: type id '(' params ')' • block
   11            | type id '(' params ')' • EXTERN ';'

    EXTERN  shift, and go to state 68
    '{'     shift, and go to state 69

    block  go to state 70


State 53

   12 params: params ',' • param

    TVOID  shift, and go to state 6
    TTYPE  shift, and go to state 7

    param  go to state 71
    type   go to state 36


State 54

   14 param: type id •

    $default  reduce using rule 14 (param)


State 55

   48 expr: '(' expr ')' •

    $default  reduce using rule 48 (expr)


State 56

   36 expr: expr • TMAS expr
   37     | expr • TMENOS expr
   38     | expr • TDIV expr
   39     | expr • TMULT expr
   40     | expr • TAND expr
   41     | expr • TOR expr
   42     | expr • TMENOR expr
   42     | expr TMENOR expr •
   43     | expr • TMOD expr
   44     | expr • TMAYOR expr
   45     | expr • TIGUAL expr

    TMENOS  shift, and go to state 43
    TMAS    shift, and go to state 44
    TMULT   shift, and go to state 45
    TDIV    shift, and go to state 46
    TMOD    shift, and go to state 47

    TMENOR  error (nonassociative)
    TMAYOR  error (nonassociative)
    TIGUAL  error (nonassociative)

    $default  reduce using rule 42 (expr)


State 57

   36 expr: expr • TMAS expr
   37     | expr • TMENOS expr
   38     | expr • TDIV expr
   39     | expr • TMULT expr
   40     | expr • TAND expr
   41     | expr • TOR expr
   42     | expr • TMENOR expr
   43     | expr • TMOD expr
   44     | expr • TMAYOR expr
   44     | expr TMAYOR expr •
   45     | expr • TIGUAL expr

    TMENOS  shift, and go to state 43
    TMAS    shift, and go to state 44
    TMULT   shift, and go to state 45
    TDIV    shift, and go to state 46
    TMOD    shift, and go to state 47

    TMENOR  error (nonassociative)
    TMAYOR  error (nonassociative)
    TIGUAL  error (nonassociative)

    $default  reduce using rule 44 (expr)


State 58

   36 expr: expr • TMAS expr
   37     | expr • TMENOS expr
   38     | expr • TDIV expr
   39     | expr • TMULT expr
   40     | expr • TAND expr
   41     | expr • TOR expr
   42     | expr • TMENOR expr
   43     | expr • TMOD expr
   44     | expr • TMAYOR expr
   45     | expr • TIGUAL expr
   45     | expr TIGUAL expr •

    TMENOS  shift, and go to state 43
    TMAS    shift, and go to state 44
    TMULT   shift, and go to state 45
    TDIV    shift, and go to state 46
    TMOD    shift, and go to state 47

    TMENOR  error (nonassociative)
    TMAYOR  error (nonassociative)
    TIGUAL  error (nonassociative)

    $default  reduce using rule 45 (expr)


State 59

   36 expr: expr • TMAS expr
   37     | expr • TMENOS expr
   37     | expr TMENOS expr •
   38     | expr • TDIV expr
   39     | expr • TMULT expr
   40     | expr • TAND expr
   41     | expr • TOR expr
   42     | expr • TMENOR expr
   43     | expr • TMOD expr
   44     | expr • TMAYOR expr
   45     | expr • TIGUAL expr

    TMULT  shift, and go to state 45
    TDIV   shift, and go to state 46
    TMOD   shift, and go to state 47

    $default  reduce using rule 37 (expr)


State 60

   36 expr: expr • TMAS expr
   36     | expr TMAS expr •
   37     | expr • TMENOS expr
   38     | expr • TDIV expr
   39     | expr • TMULT expr
   40     | expr • TAND expr
   41     | expr • TOR expr
   42     | expr • TMENOR expr
   43     | expr • TMOD expr
   44     | expr • TMAYOR expr
   45     | expr • TIGUAL expr

    TMULT  shift, and go to state 45
    TDIV   shift, and go to state 46
    TMOD   shift, and go to state 47

    $default  reduce using rule 36 (expr)


State 61

   36 expr: expr • TMAS expr
   37     | expr • TMENOS expr
   38     | expr • TDIV expr
   39     | expr • TMULT expr
   39     | expr TMULT expr •
   40     | expr • TAND expr
   41     | expr • TOR expr
   42     | expr • TMENOR expr
   43     | expr • TMOD expr
   44     | expr • TMAYOR expr
   45     | expr • TIGUAL expr

    $default  reduce using rule 39 (expr)


State 62

   36 expr: expr • TMAS expr
   37     | expr • TMENOS expr
   38     | expr • TDIV expr
   38     | expr TDIV expr •
   39     | expr • TMULT expr
   40     | expr • TAND expr
   41     | expr • TOR expr
   42     | expr • TMENOR expr
   43     | expr • TMOD expr
   44     | expr • TMAYOR expr
   45     | expr • TIGUAL expr

    $default  reduce using rule 38 (expr)


State 63

   36 expr: expr • TMAS expr
   37     | expr • TMENOS expr
   38     | expr • TDIV expr
   39     | expr • TMULT expr
   40     | expr • TAND expr
   41     | expr • TOR expr
   42     | expr • TMENOR expr
   43     | expr • TMOD expr
   43     | expr TMOD expr •
   44     | expr • TMAYOR expr
   45     | expr • TIGUAL expr

    $default  reduce using rule 43 (expr)


State 64

   36 expr: expr • TMAS expr
   37     | expr • TMENOS expr
   38     | expr • TDIV expr
   39     | expr • TMULT expr
   40     | expr • TAND expr
   41     | expr • TOR expr
   41     | expr TOR expr •
   42     | expr • TMENOR expr
   43     | expr • TMOD expr
   44     | expr • TMAYOR expr
   45     | expr • TIGUAL expr

    TMENOR  shift, and go to state 40
    TMAYOR  shift, and go to state 41
    TIGUAL  shift, and go to state 42
    TMENOS  shift, and go to state 43
    TMAS    shift, and go to state 44
    TMULT   shift, and go to state 45
    TDIV    shift, and go to state 46
    TMOD    shift, and go to state 47
    TAND    shift, and go to state 49

    $default  reduce using rule 41 (expr)


State 65

   36 expr: expr • TMAS expr
   37     | expr • TMENOS expr
   38     | expr • TDIV expr
   39     | expr • TMULT expr
   40     | expr • TAND expr
   40     | expr TAND expr •
   41     | expr • TOR expr
   42     | expr • TMENOR expr
   43     | expr • TMOD expr
   44     | expr • TMAYOR expr
   45     | expr • TIGUAL expr

    TMENOR  shift, and go to state 40
    TMAYOR  shift, and go to state 41
    TIGUAL  shift, and go to state 42
    TMENOS  shift, and go to state 43
    TMAS    shift, and go to state 44
    TMULT   shift, and go to state 45
    TDIV    shift, and go to state 46
    TMOD    shift, and go to state 47

    $default  reduce using rule 40 (expr)


State 66

   30 method_call: id '(' exprs • ')'
   31 exprs: exprs • ',' expr

    ')'  shift, and go to state 72
    ','  shift, and go to state 73


State 67

   32 exprs: expr •
   36 expr: expr • TMAS expr
   37     | expr • TMENOS expr
   38     | expr • TDIV expr
   39     | expr • TMULT expr
   40     | expr • TAND expr
   41     | expr • TOR expr
   42     | expr • TMENOR expr
   43     | expr • TMOD expr
   44     | expr • TMAYOR expr
   45     | expr • TIGUAL expr

    TMENOR  shift, and go to state 40
    TMAYOR  shift, and go to state 41
    TIGUAL  shift, and go to state 42
    TMENOS  shift, and go to state 43
    TMAS    shift, and go to state 44
    TMULT   shift, and go to state 45
    TDIV    shift, and go to state 46
    TMOD    shift, and go to state 47
    TOR     shift, and go to state 48
    TAND    shift, and go to state 49

    $default  reduce using rule 32 (exprs)


State 68

   11 method_decl: type id '(' params ')' EXTERN • ';'

    ';'  shift, and go to state 74


State 69

   15 block: '{' • vars statements '}'
   16      | '{' • vars '}'
   17      | '{' • statements '}'
   18      | '{' • '}'

    TRET    shift, and go to state 75
    TVOID   shift, and go to state 6
    TID     shift, and go to state 19
    TWHILE  shift, and go to state 76
    TIF     shift, and go to state 77
    TTYPE   shift, and go to state 7
    '{'     shift, and go to state 69
    '}'     shift, and go to state 78
    ';'     shift, and go to state 79

    vars              go to state 80
    var_decl          go to state 9
    block             go to state 81
    statements        go to state 82
    single_statement  go to state 83
    method_call       go to state 84
    id                go to state 85
    type              go to state 86


State 70

   10 method_decl: type id '(' params ')' block •

    $default  reduce using rule 10 (method_decl)


State 71

   12 params: params ',' param •

    $default  reduce using rule 12 (params)


State 72

   30 method_call: id '(' exprs ')' •

    $default  reduce using rule 30 (method_call)


State 73

   31 exprs: exprs ',' • expr

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    '('     shift, and go to state 29

    method_call  go to state 30
    expr         go to state 87
    literal      go to state 32
    id           go to state 33


State 74

   11 method_decl: type id '(' params ')' EXTERN ';' •

    $default  reduce using rule 11 (method_decl)


State 75

   26 single_statement: TRET • ';'
   27                 | TRET • expr ';'

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    ';'     shift, and go to state 88
    '('     shift, and go to state 29

    method_call  go to state 30
    expr         go to state 89
    literal      go to state 32
    id           go to state 33


State 76

   25 single_statement: TWHILE • '(' expr ')' block

    '('  shift, and go to state 90


State 77

   23 single_statement: TIF • '(' expr ')' THEN block
   24                 | TIF • '(' expr ')' THEN block TELSE block

    '('  shift, and go to state 91


State 78

   18 block: '{' '}' •

    $default  reduce using rule 18 (block)


State 79

   28 single_statement: ';' •

    $default  reduce using rule 28 (single_statement)


State 80

    5 vars: vars • var_decl
   15 block: '{' vars • statements '}'
   16      | '{' vars • '}'

    TRET    shift, and go to state 75
    TVOID   shift, and go to state 6
    TID     shift, and go to state 19
    TWHILE  shift, and go to state 76
    TIF     shift, and go to state 77
    TTYPE   shift, and go to state 7
    '{'     shift, and go to state 69
    '}'     shift, and go to state 92
    ';'     shift, and go to state 79

    var_decl          go to state 14
    block             go to state 81
    statements        go to state 93
    single_statement  go to state 83
    method_call       go to state 84
    id                go to state 85
    type              go to state 86


State 81

   29 single_statement: block •

    $default  reduce using rule 29 (single_statement)


State 82

   17 block: '{' statements • '}'
   19 statements: statements • single_statement

    TRET    shift, and go to state 75
    TID     shift, and go to state 19
    TWHILE  shift, and go to state 76
    TIF     shift, and go to state 77
    '{'     shift, and go to state 69
    '}'     shift, and go to state 94
    ';'     shift, and go to state 79

    block             go to state 81
    single_statement  go to state 95
    method_call       go to state 84
    id                go to state 85


State 83

   20 statements: single_statement •

    $default  reduce using rule 20 (statements)


State 84

   22 single_statement: method_call • ';'

    ';'  shift, and go to state 96


State 85

   21 single_statement: id • '=' expr ';'
   30 method_call: id • '(' exprs ')'

    '='  shift, and go to state 97
    '('  shift, and go to state 51


State 86

    7 var_decl: type • id '=' expr ';'

    TID  shift, and go to state 19

    id  go to state 98


State 87

   31 exprs: exprs ',' expr •
   36 expr: expr • TMAS expr
   37     | expr • TMENOS expr
   38     | expr • TDIV expr
   39     | expr • TMULT expr
   40     | expr • TAND expr
   41     | expr • TOR expr
   42     | expr • TMENOR expr
   43     | expr • TMOD expr
   44     | expr • TMAYOR expr
   45     | expr • TIGUAL expr

    TMENOR  shift, and go to state 40
    TMAYOR  shift, and go to state 41
    TIGUAL  shift, and go to state 42
    TMENOS  shift, and go to state 43
    TMAS    shift, and go to state 44
    TMULT   shift, and go to state 45
    TDIV    shift, and go to state 46
    TMOD    shift, and go to state 47
    TOR     shift, and go to state 48
    TAND    shift, and go to state 49

    $default  reduce using rule 31 (exprs)


State 88

   26 single_statement: TRET ';' •

    $default  reduce using rule 26 (single_statement)


State 89

   27 single_statement: TRET expr • ';'
   36 expr: expr • TMAS expr
   37     | expr • TMENOS expr
   38     | expr • TDIV expr
   39     | expr • TMULT expr
   40     | expr • TAND expr
   41     | expr • TOR expr
   42     | expr • TMENOR expr
   43     | expr • TMOD expr
   44     | expr • TMAYOR expr
   45     | expr • TIGUAL expr

    TMENOR  shift, and go to state 40
    TMAYOR  shift, and go to state 41
    TIGUAL  shift, and go to state 42
    TMENOS  shift, and go to state 43
    TMAS    shift, and go to state 44
    TMULT   shift, and go to state 45
    TDIV    shift, and go to state 46
    TMOD    shift, and go to state 47
    TOR     shift, and go to state 48
    TAND    shift, and go to state 49
    ';'     shift, and go to state 99


State 90

   25 single_statement: TWHILE '(' • expr ')' block

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    '('     shift, and go to state 29

    method_call  go to state 30
    expr         go to state 100
    literal      go to state 32
    id           go to state 33


State 91

   23 single_statement: TIF '(' • expr ')' THEN block
   24                 | TIF '(' • expr ')' THEN block TELSE block

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    '('     shift, and go to state 29

    method_call  go to state 30
    expr         go to state 101
    literal      go to state 32
    id           go to state 33


State 92

   16 block: '{' vars '}' •

    $default  reduce using rule 16 (block)


State 93

   15 block: '{' vars statements • '}'
   19 statements: statements • single_statement

    TRET    shift, and go to state 75
    TID     shift, and go to state 19
    TWHILE  shift, and go to state 76
    TIF     shift, and go to state 77
    '{'     shift, and go to state 69
    '}'     shift, and go to state 102
    ';'     shift, and go to state 79

    block             go to state 81
    single_statement  go to state 95
    method_call       go to state 84
    id                go to state 85


State 94

   17 block: '{' statements '}' •

    $default  reduce using rule 17 (block)


State 95

   19 statements: statements single_statement •

    $default  reduce using rule 19 (statements)


State 96

   22 single_statement: method_call ';' •

    $default  reduce using rule 22 (single_statement)


State 97

   21 single_statement: id '=' • expr ';'

    INTV    shift, and go to state 25
    BOOLV   shift, and go to state 26
    TID     shift, and go to state 19
    TMENOS  shift, and go to state 27
    TNEG    shift, and go to state 28
    '('     shift, and go to state 29

    method_call  go to state 30
    expr         go to state 103
    literal      go to state 32
    id           go to state 33


State 98

    7 var_decl: type id • '=' expr ';'

    '='  shift, and go to state 23


State 99

   27 single_statement: TRET expr ';' •

    $default  reduce using rule 27 (single_statement)


State 100

   25 single_statement: TWHILE '(' expr • ')' block
   36 expr: expr • TMAS expr
   37     | expr • TMENOS expr
   38     | expr • TDIV expr
   39     | expr • TMULT expr
   40     | expr • TAND expr
   41     | expr • TOR expr
   42     | expr • TMENOR expr
   43     | expr • TMOD expr
   44     | expr • TMAYOR expr
   45     | expr • TIGUAL expr

    TMENOR  shift, and go to state 40
    TMAYOR  shift, and go to state 41
    TIGUAL  shift, and go to state 42
    TMENOS  shift, and go to state 43
    TMAS    shift, and go to state 44
    TMULT   shift, and go to state 45
    TDIV    shift, and go to state 46
    TMOD    shift, and go to state 47
    TOR     shift, and go to state 48
    TAND    shift, and go to state 49
    ')'     shift, and go to state 104


State 101

   23 single_statement: TIF '(' expr • ')' THEN block
   24                 | TIF '(' expr • ')' THEN block TELSE block
   36 expr: expr • TMAS expr
   37     | expr • TMENOS expr
   38     | expr • TDIV expr
   39     | expr • TMULT expr
   40     | expr • TAND expr
   41     | expr • TOR expr
   42     | expr • TMENOR expr
   43     | expr • TMOD expr
   44     | expr • TMAYOR expr
   45     | expr • TIGUAL expr

    TMENOR  shift, and go to state 40
    TMAYOR  shift, and go to state 41
    TIGUAL  shift, and go to state 42
    TMENOS  shift, and go to state 43
    TMAS    shift, and go to state 44
    TMULT   shift, and go to state 45
    TDIV    shift, and go to state 46
    TMOD    shift, and go to state 47
    TOR     shift, and go to state 48
    TAND    shift, and go to state 49
    ')'     shift, and go to state 105


State 102

   15 block: '{' vars statements '}' •

    $default  reduce using rule 15 (block)


State 103

   21 single_statement: id '=' expr • ';'
   36 expr: expr • TMAS expr
   37     | expr • TMENOS expr
   38     | expr • TDIV expr
   39     | expr • TMULT expr
   40     | expr • TAND expr
   41     | expr • TOR expr
   42     | expr • TMENOR expr
   43     | expr • TMOD expr
   44     | expr • TMAYOR expr
   45     | expr • TIGUAL expr

    TMENOR  shift, and go to state 40
    TMAYOR  shift, and go to state 41
    TIGUAL  shift, and go to state 42
    TMENOS  shift, and go to state 43
    TMAS    shift, and go to state 44
    TMULT   shift, and go to state 45
    TDIV    shift, and go to state 46
    TMOD    shift, and go to state 47
    TOR     shift, and go to state 48
    TAND    shift, and go to state 49
    ';'     shift, and go to state 106


State 104

   25 single_statement: TWHILE '(' expr ')' • block

    '{'  shift, and go to state 69

    block  go to state 107


State 105
